fixed awkward spacings

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,7 +6,6 @@
 .projectinfo_question,
 .subtitle,
 .projectinfo_answer,
-.projectinfo_panel,
 .water_image_descriptor {
 	font-family: "Century Gothic";
 	font-style: normal;
@@ -21,16 +20,28 @@
 	align-items: center;
 	--sage_green: #87af73;
 }
+
+.top_subtitle {
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
+	padding: 8px 8px 8px 0px;
+	gap: 8px;
+
+	width: 70px;
+	height: 40px;
+}
 .header_parent {
 	background-color: #87af73;
 	width: 100%;
+	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	margin-bottom: -4px;
+	margin-bottom: -2px;
 }
 
 .headline {
-	display: flex;
 	width: 260px;
 	height: 60px;
 	left: 50px;
@@ -47,7 +58,7 @@
 	height: 50px;
 	font-size: 20px;
 	line-height: 25px;
-
+	text-align: center;
 	color: #ffffff;
 
 	order: 0;
@@ -59,7 +70,7 @@
 
 	font-size: 28px;
 	line-height: 34px;
-	text-align: justify;
+	text-align: center;
 	margin: auto;
 	margin-top: 1rem;
 	margin-bottom: 1rem;
@@ -85,23 +96,6 @@
 	flex-grow: 1;
 }
 
-.projectinfo_panel {
-	width: 80%;
-	height: full;
-	margin: auto;
-	margin-top: 1.75rem;
-	font-size: 1.75rem;
-	line-height: 2.25rem;
-	text-align: center;
-
-	color: #87af73;
-
-	/* Inside auto layout */
-
-	flex: none;
-	order: 0;
-	flex-grow: 1;
-}
 .image {
 	margin-top: 2rem;
 	margin-bottom: 0.5rem;
